Attemp to fix mobile image stretching

--- a/nikkis/src/css/primary-image.css
+++ b/nikkis/src/css/primary-image.css
@@ -4,12 +4,18 @@
     width: 100%;
 }
 .primary__image {
+    border: 1px solid red;
+    height: auto;
     padding: 2rem;
     width: 100%;
 }
 @media screen and ( min-width: 800px ) {
+    .primary__wrapper {
+        padding: 1rem;
+    }
     .primary__image {
         padding: 0;
+        height: 500px;
         width: 500px;
     }
 }
